# equitable-elevation-hack-23

./: .gitignore  LICENSE  README.md
backend/src/db/: index.ts
backend/src/db/models/: community.model.ts  post.model.ts  user.model.ts
backend/src/interfaces/: Community.d.ts  Express.d.ts  Post.d.ts  User.d.ts
backend/src/middleware/AuthMiddleware/: index.ts
backend/src/routes/: api.ts
backend/src/routes/auth/: routes.ts
backend/src/routes/post/: helpers.ts  index.ts  routes.ts
backend/src/routes/user/: routes.ts
frontend/: index.html  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/cards/: Feed.tsx
frontend/src/components/Footer/: index.tsx
frontend/src/components/Navbar/: index.tsx  menuItems.ts
frontend/src/components/cards/: FeedCard.tsx
frontend/src/components/common/: ConfidentialInput.tsx
frontend/src/hooks/: useToggle.tsx
frontend/src/interfaces/: Input.ts
frontend/src/layouts/: FeedLayout.tsx
frontend/src/pages/: Home.tsx
frontend/src/pages/Auth/Login/: index.tsx
frontend/src/pages/Auth/Register/: index.tsx
frontend/src/pages/Home/: index.tsx
frontend/src/pages/Landing/: index.tsx
frontend/src/redux/: store.ts
frontend/src/redux/slices/: index.ts
frontend/src/redux/slices/auth/: slice.ts
server/: .env.example  Cargo.toml
server/src/: lib.rs  main.rs
server/src/db/: mod.rs
server/src/db/orm/: model.rs  schema.rs
server/src/routes/: mod.rs
server/src/routes/auth/: mod.rs
server/src/utils/: jwt.rs
