[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.31"
jsonwebtoken = "8.3.0"
mongodb = "2.6.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
