[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
async-trait = "0.1.73"
chrono = "0.4.31"
dotenv = "0.15.0"
envy = "0.4.2"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[dependencies.mongodb]
version = "2.7.0"
default-features = false
features = ["async-std-runtime"]
